--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "webpack-hot-middleware": "^2.13.2"
   },
   "devDependencies": {
-    "jquery": "^3.1.1"
+    "css-loader": "^0.26.1",
+    "jquery": "^3.1.1",
+    "sass-loader": "^4.1.1",
+    "style-loader": "^0.13.1"
   }
 }
