--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
     "css-loader": "^0.26.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "node-sass": "^4.5.0",
-    "underscore": "^1.8.3",
-    "webpack": "^1.13.3",
-    "webpack-hot-middleware": "^2.13.2",
     "sass-loader": "^4.1.1",
-    "style-loader": "^0.13.1"
+    "style-loader": "^0.13.1",
+    "underscore": "^1.8.3",
+    "webpack": "^2.2.1",
+    "webpack-hot-middleware": "^2.13.2"
   },
   "devDependencies": {
     "jquery": "^3.1.1"
